gitops/hub-nginx/hub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-hub
  name: nginx-hub
  namespace: apps
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-hub
  type: ClusterIP
status:
  loadBalancer: {}
